@@ -1,9 +1,15 @@
 <h1>News</h1>
 
+<h2>Version 0.8.3</h2>
+<p>
+Xjadeo version 0.8.3 is includes updates for OS X 10.11 (El Capitan),
+and a tweak for to allow loading huge files (&gt; 4GB).
+</p>
+
 <h2>Version 0.8.2</h2>
 <p>
 Xjadeo version 0.8.2 fixes an issue with high CPU usage when seeking after the end of a video.
-Some further typographic errr
+Correct some typographic errr... :)
 </p>
 
 <h2>Version 0.8.1</h2>
